--- a/app/src/main/res/drawable/save_alert.xml
+++ b/app/src/main/res/drawable/save_alert.xml
@@ -2,13 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <stroke
-        android:color="@color/orange"
-        android:width="2dp"
-        />
     <solid
-        android:color="@color/white"/>
+        android:color="@color/purple_500"
+        />
     <corners
-        android:radius="50dp"/>
-
+        android:radius="50dp"
+        />
 </shape>
