--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -23,6 +23,7 @@
         android:id="@+id/floating_add_alert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:elevation="1dp"
         app:borderWidth="0dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
@@ -30,5 +31,5 @@
         android:src="@drawable/baseline_add_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fav_recycler" />
+        app:layout_constraintTop_toBottomOf="@+id/alert_recycler" />
 </androidx.constraintlayout.widget.ConstraintLayout>
