--- a/app/src/main/res/layout/fragment_alert.xml
+++ b/app/src/main/res/layout/fragment_alert.xml
@@ -5,31 +5,60 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.alert.AlertFragment">
-
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        android:orientation="vertical"
+        android:id="@+id/scroll"
         app:layout_constraintHeight_percent="0.9"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/floating_add_alert"
-        android:id="@+id/alert_recycler"
-        />
+        app:layout_constraintBottom_toTopOf="@id/floating_add_alert"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+            <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/gif_setting"
+                android:layout_width="match_parent"
+                android:layout_height="180dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/orangebell" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:orientation="vertical"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/gif_setting"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:id="@+id/alert_recycler"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.core.widget.NestedScrollView>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_add_alert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="1dp"
-        app:borderWidth="0dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="16dp"
         android:layout_marginBottom="10dp"
+        app:layout_constraintHeight_percent="0.1"
         android:backgroundTint="@color/purple_500"
+        android:elevation="1dp"
         android:src="@drawable/baseline_add_24"
+        app:borderWidth="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/alert_recycler" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
