--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,14 +42,14 @@
 
             <androidx.cardview.widget.CardView
 
-                android:layout_width="match_parent"
-                android:layout_height="250dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:id="@+id/today_forcast_card"
                 android:layout_marginHorizontal="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:cardCornerRadius="40dp"
+                app:cardCornerRadius="100dp"
                 android:backgroundTint="@color/purple_700">
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
@@ -59,7 +59,8 @@
                         android:id="@+id/current_loc_img"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginStart="68dp"
+                        android:layout_marginStart="40dp"
+                        android:layout_marginTop="20dp"
                         android:src="@drawable/location"
                         app:layout_constraintBottom_toBottomOf="@id/city_name"
                         app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +80,6 @@
                         app:layout_constraintHorizontal_bias="0.081"
                         app:layout_constraintStart_toEndOf="@+id/current_loc_img"
                         app:layout_constraintTop_toTopOf="parent" />
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -99,17 +99,11 @@
                         android:textSize="30sp"
                         android:textColor="@color/white"
                         app:layout_constraintTop_toBottomOf="@+id/weather_mood"
-                        app:layout_constraintBottom_toTopOf="@id/today_img"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginBottom="40dp"
 
                         />
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:id="@+id/today_img"
-                        app:layout_constraintTop_toBottomOf="@+id/today_temp"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 
@@ -118,25 +112,24 @@
 
 
             </androidx.cardview.widget.CardView>
-
-            <!--        <androidx.recyclerview.widget.RecyclerView-->
-            <!--            android:layout_width="match_parent"-->
-            <!--            android:layout_height="wrap_content"-->
-            <!--            android:id="@+id/recycler_home"-->
-            <!--            app:layout_constraintTop_toBottomOf="card"-->
-            <!--            app:layout_constraintEnd_toEndOf="parent"-->
-            <!--            app:layout_constraintStart_toStartOf="parent"-->
-            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
-            <!--            android:orientation="vertical"-->
-            <!--            tools:listitem="@layout/day_item"/>-->
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/today_img"
+                android:elevation="3dp"
+                app:elevation="2dp"
+                app:layout_constraintTop_toBottomOf="@id/today_forcast_card"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="@id/today_forcast_card"/>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_hour"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="10dp"
-                app:layout_constraintTop_toBottomOf="@id/today_forcast_card"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/today_img"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:listitem="@layout/hour_item"
