Updating home Design

--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -22,6 +22,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/day_name"
                 android:text="@string/day_name"
+                android:fontFamily="@font/lemon"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toTopOf="parent"
@@ -43,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/day_status"
+                android:fontFamily="@font/lemon"
                 android:text="@string/day_status"
                 android:textStyle="bold"
                 android:textColor="@color/white"
@@ -55,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/day_temp"
+                android:fontFamily="@font/lemon"
                 android:text="@string/temp"
                 android:textStyle="bold"
                 android:textColor="@color/white"
