--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -63,6 +63,7 @@
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="10dp"
                         android:paddingStart="2dp"
+                        android:maxLines="1"
                         android:textColor="@color/white"
                         android:textSize="20sp"
                         android:fontFamily="@font/lemon"
