--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,13 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+<!--    <ImageView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:src="@drawable/backgroundblue"-->
+<!--        android:scaleType="centerCrop"-->
+<!--        />-->
+
     <include
         android:id="@+id/app_bar_main"
         layout="@layout/app_bar_main"
@@ -24,6 +31,7 @@
         app:lottie_autoPlay="true"
         app:lottie_loop="true"
         app:lottie_rawRes="@raw/back" />
+
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
